--- a/index.html
+++ b/index.html
@@ -11,22 +11,35 @@
         <!--Webpage Title-->
         <title>Akash's Website</title>
     </head>
-    <body style="background-color:bisque">
+    <body style="background-image: linear-gradient(-125deg, orangered, rebeccapurple);">
         <!--HEADER-->
         <header>
             <link rel="stylesheet" href="header.css">
-            <h1 style="font-family:cursive; padding:12px;"><a href="index.html" style="text-decoration:none; color:crimson"><center>Akash Reddy Alla</center></a></h1><!--Refresh Page-->
+            
+            <!--Refresh Page-->
             <nav>
-                    <a href="#section-one">Education</a>
-                    <a href="#section-two">Projects</a>
-                    <a href="#section-three">Experience</a>
-                    <a href="#section-four">Other-Involvement</a>
-                    <a href="#section-five">Contact</a>
+                <div class="name">
+                    <h1 style="font-family:cursive; padding:12px;">
+                        <a href="index.html" style="text-decoration:none; color:ivory">
+                            Akash Reddy Alla
+                        </a>
+                    </h1>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li><a href="#section-one">Education</a></li>
+                        <li><a href="#section-two">Projects</a></li>
+                        <li><a href="#section-three">Experience</a></li>
+                        <li><a href="#section-four">Other-Involvement</a></li>
+                        <li><a href="#section-five">Contact</a></li>
+                    </ul>
+                </div>
+                
             </nav>
         </header>
         <!--MAIN-->
         <main>
-            <center><img src="ai.png" width="100%" height="auto" ></center>
+            <center><img src="ai.png" class="aiImage" style="border-radius:3%; width:100%; height:auto"></center>
             <link rel="stylesheet" href="body.css">
             <div id="section-one" class="section-one">
                 <h2 class="topicstyle"><center>Education</center></h2>
