--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         </header>
         <!--MAIN-->
         <main>
-            <center><img src="ai.png" class="aiImage" style="border-radius:3%; width:100%; height:auto"></center>
+            <br>
+            <center><img src="ai.png" class="aiImage" style="border-radius:30px; width:100%; height:auto"></center>
             <link rel="stylesheet" href="body.css">
+            <br>
             <div id="section-one" class="section-one">
                 <h2 class="topicstyle"><center>Education</center></h2>
                 <div class="row">
@@ -64,6 +66,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div id="section-two" class="section-two">
                 <h2 class="topicstyle">Projects:</h2>
                 <div class="project-styles">
@@ -110,9 +113,9 @@
                         <li>Identified manufacturing processes used for each part and assembly methods </li>
                         <li>Made an analytical analysis report on implementing cost cutting methods and improving efficiency.</li>
                     </ul>
-                </div>
-                
+                </div> 
             </div>
+            <br>
             <div id="section-three" class="section-three">
                 <h2 class="topicstyle">Experiences:</h2>
                 Engineering Intern (06/2019-10/2019):<br>
@@ -130,6 +133,7 @@
                     <li>Generated simulation videos containing the computed temperatures of the filler material at various instances. Faster results achieved at the cost of accuracy.</li>
                 </ul>
             </div>
+            <br>
             <div id="section-four" class="section-four">
                 <h2 class="topicstyle"><center>Other-Involvement</center></h2>
                 Sunshine Mentor (08/2017-08/2018)
@@ -168,6 +172,7 @@
                     <li>Participated in competitions conducted in Kaggle</li>
                 </ul>
             </div>
+            <br>
         </main>
         <!-- Footer-->
         <footer>
@@ -178,8 +183,9 @@
                     <img src="linkedin.png" width="4.5%" height="auto">
                 </a>
             </div>
+            <br>
             <div class="end">
-                <center>---</center>
+                <center>- END -</center>
             </div>
         </footer>
     </body>
